tests/interpreter/errors/map_key_non_string.err
error[I006]: invalid map key: expected string, got int
  --> tests/interpreter/errors/map_key_non_string.mochi:1:10

  1 | let x = {1: 2}
    |          ^

help:
  Only `string` keys are allowed in map literals.
